# sstan

./: .gitignore  Cargo.toml  README.md  clippy.toml  optimization_report_sections.md  qa_report_sections.md  sstan.json  sstan.md  sstan.toml  sstan_report.md  test.md  test.sol  test0.sol  vulnerability_report_sections.md
.github/workflows/: ci.yml
docs/: Contributing.md  identified-optimizations.md  identified-quality-assurance.md  identified-vulnerabilities.md
examples/: parse-contract-into-ast.rs  parse-contract.rs
mocks/: constant_variable.md  immutable_variable.md  memory_to_calldata.md  optimization_report_sections.md  panoptic_report.md  qa_report_sections.md  qa_table_sections.md  sstan.md  vulnerability_report_sections.md  wildcat_report.md
scope/3xcalibur/: solstat_report.md
src/: ctor.rs  engine.rs  lib.rs  opts.rs  report.rs  utils.rs
src/analyzer/: ast.rs  mod.rs  utils.rs
src/extractors/: compound.rs  mod.rs  primitive.rs  visitable.rs  visitor.rs
src/old_report/: optimization_report.rs  qa_report.rs
src/optimizations/: address_balance.rs  address_zero.rs  assign_update_array_value.rs  bool_equals_bool.rs  cache_array_length.rs  cache_storage_in_memory.rs  constant_variable.rs  event_indexing.rs  immutable_variable.rs  increment_decrement.rs  memory_to_calldata.rs  mod.rs  multiple_require.rs  optimal_comparison.rs  optimization_template.rs  pack_storage_variables.rs  pack_struct_variables.rs  payable_functions.rs  private_constant.rs  read_storage_in_for_loop.rs  safe_math.rs  shift_math.rs  short_revert_string.rs  solidity_keccak256.rs  (+4 more)
(+141 files in other folders)
