[package]
name = "sstan"
version = "0.1.0"
edition = "2021"
license = ""
exclude = [
    "target/*",
    "example_report.md",
    ".github/*",
    ".gitignore"
]

[dependencies]
clap = {version= "4.3.19", features = ["derive"]}
solang-parser = "0.3.1"
indicatif = "0.17.5"
regex = "1.9.1"
toml = "0.7.6"
serde = {version= "1.0.175",  features = ["derive"]}
colour = "0.7.0"
thiserror = "1.0.44"
eyre = "0.6.8"
tempfile = "3.8.0"
ruint = "1.10.1"

[[bin]]
name = "sstan"
path = "bin/sstan.rs"

